# chithi

./: .gitignore  README.md  docker-compose.yml  renovate.json
.github/workflows/: build-cli.yml  build-frontend.yml  build-landing-page.yml  docker-build-backend.yml  docker-build-frontend.yml  docs-preview..yml  publish-ghcr.yml  push-landing-page-ghcr.yml  release-cli.yml
apps/docs/: .readthedocs.yaml  pyproject.toml  zensical.toml
apps/docs/docs/: index.md
apps/docs/docs/backend/: architecture.md  environment.md
apps/docs/docs/cli/: environment.md  license.md
apps/docs/docs/deployments/docker/basic/: caddy.md  nginx.md  traefik.md  vanila.md
apps/docs/docs/deployments/docker/watchtower/: caddy.md  nginx.md  traefik.md  vanila.md
apps/docs/docs/frontend/: architecture.md  environment.md  license.md
apps/docs/docs/guides/cli/: upload.md
apps/docs/docs/images/index/: chithi-dev.avif
apps/docs/docs/js/: termynal.js
apps/docs/docs/transparency/: ai.md
apps/landing-page/: Dockerfile  biome.json  next.config.ts  package-lock.json  package.json
apps/landing-page/app/: layout.tsx  page.tsx
apps/landing-page/app/scalar/: openapi.json  page.tsx
apps/landing-page/providers/: ProgressProvider.tsx
apps/landing-page/public/images/: chithi-(dev).avif  chithi-dev.avif
apps/landing-page/src/app/: globals.css  iframe.tsx  layout.tsx  page.client.tsx  page.tsx  registry.tsx
apps/landing-page/src/app/(home)/: layout.client.tsx  layout.tsx  page.client.tsx  page.tsx
apps/landing-page/src/app/(home)/download/: page.client.tsx  page.tsx  types.ts
apps/landing-page/src/app/(home)/scalar/: page.tsx
apps/landing-page/src/app/(home)/schemas/: ApiSpecContext.tsx  layout.tsx  page.tsx
apps/landing-page/src/app/(home)/schemas/scalar/: page.tsx
apps/landing-page/src/app/(home)/schemas/swaggar/: page.tsx
apps/landing-page/src/app/scalar/: page.tsx
apps/landing-page/src/consts/: urls.ts
apps/landing-page/src/css/: fonts.scss  globals.css
apps/landing-page/src/icons/: github.tsx
apps/landing-page/src/lib/: octokit.server.ts
apps/landing-page/src/providers/: OctokitProvider.tsx  ProgressProvider.tsx
apps/landing-page/src/server/providers/: octokit.server.ts
apps/landing-page/src/utils/: cn.ts
coturn/: turnserver.conf
src/backend/: .python-version  pyproject.toml
src/backend/alembic/versions/: d228bf522042_migrate_to_biginteger.py
src/backend/app/: __main__.py  deps.py  main.py  pagination.py  settings.py
src/backend/app/celery/: __init__.py
src/backend/app/cli/: add_user.py  change_password.py  list_users.py
src/backend/app/converter/: bytes.py
src/backend/app/decorators/: rate_limit.py
src/backend/app/guards/: rate_limit.py
src/backend/app/lua/: __init__.py  __init__.pyi  json_remove_file_by_key.lua  json_remove_upload_by_key.lua  json_update_uploaded_bytes_by_key.lua  rate_limit.lua
src/backend/app/managers/: __init__.py  websocket.py
src/backend/app/models/: files.py
src/backend/app/parser/: time.py
src/backend/app/routes/: login.py  token.py  upload.py  ws.py
src/backend/app/routes/http/: download.py  login.py  reverse.py  speedtest.py  token.py  upload.py
src/backend/app/routes/http/admin/: files.py
src/backend/app/routes/ws/: reverse.py  state.py
src/backend/app/schemas/: reverse.py  speedtest.py  token.py
src/backend/app/singletons/: redis.py
src/backend/app/states/: _global.py  app.py  room.py
src/backend/app/tasks/: __init__.py  clean_file.py  persist_file.py
src/backend/scripts/: start_celery_beat.sh
src/cli/: .python-version  build.py  pyproject.toml
src/cli/app/: __main__.py  archive.py  client.py  crypto.py  main.py  settings.py
src/cli/app/builder/: urls.py
src/cli/app/commands/: download.py  upload.py
src/cli/app/constants/: crypto.py
src/cli/app/helpers/: crypto.py  file.py  print.py
src/frontend/: .dockerignore  .prettierrc  Dockerfile  package-lock.json  package.json  svelte.config.ts  vite.config.ts
src/frontend/plugins/: vite-plugin-integrity-gpg.ts
src/frontend/scripts/: inject-version.ts  inject_version.py  update-ui.ts
src/frontend/src/: app.d.ts
src/frontend/src/css/: fonts.scss  nprogress.scss  tailwind.css
src/frontend/src/lib/: utils.ts
src/frontend/src/lib/components/: AnimatedGrid.svelte  CodeViewer.svelte  FileViewerOverlay.svelte  QRCode.svelte
src/frontend/src/lib/components/ui/chart/: chart-container.svelte  chart-style.svelte  (+2 more)
src/frontend/src/lib/consts/: backend.ts  urls.ts
src/frontend/src/lib/functions/: bytes.ts  download.ts  mime.ts  streams.ts  urls.ts  viewer.ts
src/frontend/src/lib/markdown/plugins/: email-obfuscate.ts
src/frontend/src/lib/queries/: auth.ts  config.ts  files.ts  onboarding.ts
src/frontend/src/lib/remote/: auth.remote.ts
src/frontend/src/lib/store/: app-state.svelte.ts  token.svelte.ts  user.svelte.ts
src/frontend/src/lib/svgs/: complete.svelte
src/frontend/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts
src/frontend/src/routes/(needs_onboarding)/(login_required)/: +layout.server.ts  +layout.svelte  +layout.ts
src/frontend/src/routes/(needs_onboarding)/(navbar_and_footer)/: +layout.svelte  +page.svelte  +page.ts
src/frontend/src/routes/(needs_onboarding)/login/: +page.server.ts  +page.svelte  +page.ts  login_form.svelte  schema.ts
src/frontend/src/routes/(needs_onboarding)/logout/: +page.server.ts  +page.svelte  +page.ts
src/frontend/src/routes/information/: +page.svelte
src/frontend/src/routes/onboarding/: +page.svelte  +page.ts  stage_1.svelte
src/frontend/src/routes/once/[slug]/: +page.server.ts  +page.svelte  +page.ts
(+60 files in other folders)
