[project]
name = "chithi_backend"
version = "0.1.0"
description = "The next generation end to end file sharing server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Fastapi
    "fastapi>=0.127.0",
    # Faster Loops
    "uvloop>=0.22.1; sys_platform == 'linux'",
    # ASGI server
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
    "python-multipart>=0.0.21",
    # Password Hashing
    "pwdlib[argon2]>=0.3.0",
    # Pydantic based settings manager
    "pydantic-settings>=2.12.0",
    # JWT
    "pyjwt>=2.10.1",
    # Database and ORM
    "sqlmodel>=0.0.27",
    "sqlalchemy[postgresql-asyncpg]>=2.0.45",
    # Migration Engine
    "alembic>=1.17.2",
    # Cli
    "typer>=0.20.1",
    # Rustfs Upload
    "aioboto3>=15.5.0",
    # Task queue
    "celery>=5.6.1",
    "celery-aio-pool>=0.1.0rc8",
    "celery-types>=0.24.0",
    # Redis for caching
    "redis[hiredis]>=6.4.0",
    # Mandatory type
    "types-aiobotocore-s3>=2.25.2",
    "types-aioboto3>=15.5.0",
]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.16",
    "ruff>=0.14.10",
    # Task runner
    "poethepoet>=0.39.0",
    # Type checker
    "pyrefly>=0.59.1",
]
[tool.poe.tasks]
dev = "fastapi dev ./app/main.py"

[tool.setuptools]
packages = ["app"]

[tool.uv]
default-groups = "all"
package = true

[project.scripts]
backend = "app.__main__:main"

[tool.ruff.lint]
extend-select = ["I"] 

[tool.ruff.format]
skip-magic-trailing-comma = false  # Avoids conflict with isort.split-on-trailing-comma

[tool.ruff.lint.isort]
split-on-trailing-comma = true  # Keep this aligned with format.skip-magic-trailing-comma
combine-as-imports = true

[tool.pyrefly]
strict = true