[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # CLI
    "typer>=0.21.0",
    # Http Client
    "requests>=2.32.0",
    # Encryption (AES-256-GCM + Argon2id KDF)
    "cryptography==46.0.3",
    # ZIP with WinZip AES-256 support (matches web front-end)
    "pyzipper>=0.3.6",
    # Progress bars
    "tqdm>=4.67.0",
    # Env handling
    "pydantic-settings>=2.12.0",
    # Console Lib
    "rich>=14.3.2",
    "qrcode>=8.2",
]


[dependency-groups]
build = ["nuitka>=2.8.9", "zstandard>=0.25.0"]
dev = ["poethepoet>=0.39.0"]

[tool.poe.tasks]
nuitka-build = "python build.py"
nuitka-debug = "python build.py debug"

[tool.setuptools]
packages = ["app"]

[tool.uv]
package = true
default-groups = ['build', 'dev']


[project.scripts]
chithi = "app.__main__:main"
